// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'base only' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## 종점

PR 제출까지 수행하고 절대 머지하지 말 것. PR 생성·CI 확인·bead \`resolved\`(pr_url metadata 포함) 기록까지 마친 뒤 종료하라. 머지는 사람의 클릭이다.

## PR base

이 저장소의 target_base 는 \`ilsun/dev\` 다. PR 은 반드시 \`gh pr create --base ilsun/dev\` 로 열어라. \`--base\` 를 빼면 GitHub 기본 브랜치로 열리고, 머지 클릭이 그대로 그 브랜치에 랜딩한다. 머지 직전 게이트가 PR 의 baseRefName 을 이 값과 대조해 불일치면 fail-closed 로 멈춘다(자동 재타겟 없음).

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 PR 제출과 bead \`resolved\` 기록이다. 머지는 사람의 클릭이다.
- hook 무력화 **쓰기** — \`git push --no-verify\`, \`git -c core.hooksPath=…\`, \`git config core.hooksPath <값>\` / \`git config set|unset core.hooksPath\` / \`git config --unset core.hooksPath\`, \`GIT_CONFIG_COUNT\`/\`GIT_CONFIG_KEY_*\`/\`GIT_CONFIG_VALUE_*\` 재정의.
  - 대안: git 설정을 격리해야 하면 \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null\`을 쓴다. 이 두 변수는 판정 대상이 아니고 hook 경로를 건드리지 않는다.
  - 오답: \`GIT_CONFIG_COUNT=1 GIT_CONFIG_KEY_0=core.hooksPath GIT_CONFIG_VALUE_0="" go test ./...\`
  - 정답: \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null go test ./...\`

### 거부만 됨 — 세션은 계속된다

- base 브랜치 직접 랜딩 금지 — 이 attempt 가 맡은 저장소의 base 로 향하는 \`git push\` 는 attempt 전용 pre-push hook 이 거부한다. 세션은 종료되지 않고 push 만 실패한다. 다른 저장소의 base 로 향하는 push 는 hook 의 판정 대상이 아니다(통과).
  - 대안: feature branch 로 push 하고 \`gh pr create --base <target_base>\` 로 PR 을 연다.
- 사후 판정 — 이 attempt 가 자기 base 로 push 한 기록이 있고 그 커밋이 원격 base 에서 도달 가능하면 attempt 가 \`base_landing_detected\` 로 실패 처리된다.

### 허용됨 — 오해하지 말 것

- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'disposition + fast_track ignores targ…' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## fast_track

게이트는 기본값으로 자동 디스패치하고 영수증만 남긴다. 질문 없이 기본값으로 진행하라.

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 스펙 수정 커밋과 영수증 기록이다. 머지는 물론 PR도 이 세션의 일이 아니다.

위 한 항목이 이 세션에 걸리는 즉시 종료 조건의 전부다. hook 무력화 판정은 이 세션에 적용되지 않는다 — 아래 「허용됨」을 보라.

### 거부만 됨 — 세션은 계속된다

- 이 세션에 걸리는 거부 판정은 없다. base push 판정이 이 세션에는 적용되지 않기 때문이다(아래 「허용됨」).

### 허용됨 — 오해하지 말 것

- 이 세션은 REVISE 처분 세션이다. resolved base 에 스펙 수정을 게시하는 것이 임무이므로 base 로의 \`git push\` 와 hook 무력화 판정이 **적용되지 않는다**. 그렇다고 hook 을 무력화할 이유는 없다 — 설치된 hook 자체가 없다.
- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'disposition + fast_track' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## fast_track

게이트는 기본값으로 자동 디스패치하고 영수증만 남긴다. 질문 없이 기본값으로 진행하라.

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 스펙 수정 커밋과 영수증 기록이다. 머지는 물론 PR도 이 세션의 일이 아니다.

위 한 항목이 이 세션에 걸리는 즉시 종료 조건의 전부다. hook 무력화 판정은 이 세션에 적용되지 않는다 — 아래 「허용됨」을 보라.

### 거부만 됨 — 세션은 계속된다

- 이 세션에 걸리는 거부 판정은 없다. base push 판정이 이 세션에는 적용되지 않기 때문이다(아래 「허용됨」).

### 허용됨 — 오해하지 말 것

- 이 세션은 REVISE 처분 세션이다. resolved base 에 스펙 수정을 게시하는 것이 임무이므로 base 로의 \`git push\` 와 hook 무력화 판정이 **적용되지 않는다**. 그렇다고 hook 을 무력화할 이유는 없다 — 설치된 hook 자체가 없다.
- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'disposition ignores target_base' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 스펙 수정 커밋과 영수증 기록이다. 머지는 물론 PR도 이 세션의 일이 아니다.

위 한 항목이 이 세션에 걸리는 즉시 종료 조건의 전부다. hook 무력화 판정은 이 세션에 적용되지 않는다 — 아래 「허용됨」을 보라.

### 거부만 됨 — 세션은 계속된다

- 이 세션에 걸리는 거부 판정은 없다. base push 판정이 이 세션에는 적용되지 않기 때문이다(아래 「허용됨」).

### 허용됨 — 오해하지 말 것

- 이 세션은 REVISE 처분 세션이다. resolved base 에 스펙 수정을 게시하는 것이 임무이므로 base 로의 \`git push\` 와 hook 무력화 판정이 **적용되지 않는다**. 그렇다고 hook 을 무력화할 이유는 없다 — 설치된 hook 자체가 없다.
- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'disposition' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 스펙 수정 커밋과 영수증 기록이다. 머지는 물론 PR도 이 세션의 일이 아니다.

위 한 항목이 이 세션에 걸리는 즉시 종료 조건의 전부다. hook 무력화 판정은 이 세션에 적용되지 않는다 — 아래 「허용됨」을 보라.

### 거부만 됨 — 세션은 계속된다

- 이 세션에 걸리는 거부 판정은 없다. base push 판정이 이 세션에는 적용되지 않기 때문이다(아래 「허용됨」).

### 허용됨 — 오해하지 말 것

- 이 세션은 REVISE 처분 세션이다. resolved base 에 스펙 수정을 게시하는 것이 임무이므로 base 로의 \`git push\` 와 hook 무력화 판정이 **적용되지 않는다**. 그렇다고 hook 을 무력화할 이유는 없다 — 설치된 hook 자체가 없다.
- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'fast_track + base (the worker dispatc…' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## fast_track

게이트는 기본값으로 자동 디스패치하고 영수증만 남긴다. 질문 없이 기본값으로 진행하라.

## 종점

PR 제출까지 수행하고 절대 머지하지 말 것. PR 생성·CI 확인·bead \`resolved\`(pr_url metadata 포함) 기록까지 마친 뒤 종료하라. 머지는 사람의 클릭이다.

## PR base

이 저장소의 target_base 는 \`main\` 다. PR 은 반드시 \`gh pr create --base main\` 로 열어라. \`--base\` 를 빼면 GitHub 기본 브랜치로 열리고, 머지 클릭이 그대로 그 브랜치에 랜딩한다. 머지 직전 게이트가 PR 의 baseRefName 을 이 값과 대조해 불일치면 fail-closed 로 멈춘다(자동 재타겟 없음).

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 PR 제출과 bead \`resolved\` 기록이다. 머지는 사람의 클릭이다.
- hook 무력화 **쓰기** — \`git push --no-verify\`, \`git -c core.hooksPath=…\`, \`git config core.hooksPath <값>\` / \`git config set|unset core.hooksPath\` / \`git config --unset core.hooksPath\`, \`GIT_CONFIG_COUNT\`/\`GIT_CONFIG_KEY_*\`/\`GIT_CONFIG_VALUE_*\` 재정의.
  - 대안: git 설정을 격리해야 하면 \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null\`을 쓴다. 이 두 변수는 판정 대상이 아니고 hook 경로를 건드리지 않는다.
  - 오답: \`GIT_CONFIG_COUNT=1 GIT_CONFIG_KEY_0=core.hooksPath GIT_CONFIG_VALUE_0="" go test ./...\`
  - 정답: \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null go test ./...\`

### 거부만 됨 — 세션은 계속된다

- base 브랜치 직접 랜딩 금지 — 이 attempt 가 맡은 저장소의 base 로 향하는 \`git push\` 는 attempt 전용 pre-push hook 이 거부한다. 세션은 종료되지 않고 push 만 실패한다. 다른 저장소의 base 로 향하는 push 는 hook 의 판정 대상이 아니다(통과).
  - 대안: feature branch 로 push 하고 \`gh pr create --base <target_base>\` 로 PR 을 연다.
- 사후 판정 — 이 attempt 가 자기 base 로 push 한 기록이 있고 그 커밋이 원격 base 에서 도달 가능하면 attempt 가 \`base_landing_detected\` 로 실패 처리된다.

### 허용됨 — 오해하지 말 것

- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'fast_track' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## fast_track

게이트는 기본값으로 자동 디스패치하고 영수증만 남긴다. 질문 없이 기본값으로 진행하라.

## 종점

PR 제출까지 수행하고 절대 머지하지 말 것. PR 생성·CI 확인·bead \`resolved\`(pr_url metadata 포함) 기록까지 마친 뒤 종료하라. 머지는 사람의 클릭이다.

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 PR 제출과 bead \`resolved\` 기록이다. 머지는 사람의 클릭이다.
- hook 무력화 **쓰기** — \`git push --no-verify\`, \`git -c core.hooksPath=…\`, \`git config core.hooksPath <값>\` / \`git config set|unset core.hooksPath\` / \`git config --unset core.hooksPath\`, \`GIT_CONFIG_COUNT\`/\`GIT_CONFIG_KEY_*\`/\`GIT_CONFIG_VALUE_*\` 재정의.
  - 대안: git 설정을 격리해야 하면 \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null\`을 쓴다. 이 두 변수는 판정 대상이 아니고 hook 경로를 건드리지 않는다.
  - 오답: \`GIT_CONFIG_COUNT=1 GIT_CONFIG_KEY_0=core.hooksPath GIT_CONFIG_VALUE_0="" go test ./...\`
  - 정답: \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null go test ./...\`

### 거부만 됨 — 세션은 계속된다

- base 브랜치 직접 랜딩 금지 — 이 attempt 가 맡은 저장소의 base 로 향하는 \`git push\` 는 attempt 전용 pre-push hook 이 거부한다. 세션은 종료되지 않고 push 만 실패한다. 다른 저장소의 base 로 향하는 push 는 hook 의 판정 대상이 아니다(통과).
  - 대안: feature branch 로 push 하고 \`gh pr create --base <target_base>\` 로 PR 을 연다.
- 사후 판정 — 이 attempt 가 자기 base 로 push 한 기록이 있고 그 커밋이 원격 base 에서 도달 가능하면 attempt 가 \`base_landing_detected\` 로 실패 처리된다.

### 허용됨 — 오해하지 말 것

- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;

exports[`runner/preamble channel split (UI-rxp3 §1) > freezes the assembled system prompt for 'plain' 1`] = `
"## 무인 모드

이 세션은 사람 없이 실행된다. 다음은 규칙이 아니라 환경 사실이다.

- 사용자는 이 세션과 통신할 수 없다. 질문 도구는 응답자가 없어 영원히 대기한다.
- hard-stop 조건은 \`blocker\` 줄을 출력한 뒤 비정상 종료로 표면화하라. 그것이 이 환경에서 사람에게 도달하는 유일한 경로다.
- headless 프로세스는 턴이 끝나는 즉시 종료된다. 대기 중인 백그라운드 태스크(예: 비동기 리뷰 브리지)는 함께 kill되고 결과는 유실된다. 결과가 필요한 태스크는 턴 안에서 완료까지 기다려라.

## 종점

PR 제출까지 수행하고 절대 머지하지 말 것. PR 생성·CI 확인·bead \`resolved\`(pr_url metadata 포함) 기록까지 마친 뒤 종료하라. 머지는 사람의 클릭이다.

## 가드 계약

이 세션 위에는 세션이 안에서 볼 수 없는 가드 층이 있다. 심각도는 셋으로 갈린다.

### 즉시 종료 — 세션이 kill된다

- \`gh pr merge\` — argv만으로 판정되어 즉시 종료된다.
  - 대안: 이 세션의 종점은 PR 제출과 bead \`resolved\` 기록이다. 머지는 사람의 클릭이다.
- hook 무력화 **쓰기** — \`git push --no-verify\`, \`git -c core.hooksPath=…\`, \`git config core.hooksPath <값>\` / \`git config set|unset core.hooksPath\` / \`git config --unset core.hooksPath\`, \`GIT_CONFIG_COUNT\`/\`GIT_CONFIG_KEY_*\`/\`GIT_CONFIG_VALUE_*\` 재정의.
  - 대안: git 설정을 격리해야 하면 \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null\`을 쓴다. 이 두 변수는 판정 대상이 아니고 hook 경로를 건드리지 않는다.
  - 오답: \`GIT_CONFIG_COUNT=1 GIT_CONFIG_KEY_0=core.hooksPath GIT_CONFIG_VALUE_0="" go test ./...\`
  - 정답: \`GIT_CONFIG_GLOBAL=/dev/null GIT_CONFIG_SYSTEM=/dev/null go test ./...\`

### 거부만 됨 — 세션은 계속된다

- base 브랜치 직접 랜딩 금지 — 이 attempt 가 맡은 저장소의 base 로 향하는 \`git push\` 는 attempt 전용 pre-push hook 이 거부한다. 세션은 종료되지 않고 push 만 실패한다. 다른 저장소의 base 로 향하는 push 는 hook 의 판정 대상이 아니다(통과).
  - 대안: feature branch 로 push 하고 \`gh pr create --base <target_base>\` 로 PR 을 연다.
- 사후 판정 — 이 attempt 가 자기 base 로 push 한 기록이 있고 그 커밋이 원격 base 에서 도달 가능하면 attempt 가 \`base_landing_detected\` 로 실패 처리된다.

### 허용됨 — 오해하지 말 것

- base 를 브랜치로 들이는 \`git merge\`(예: \`git merge origin/main\`) — 허용된다. 세션은 종료되지 않고, 발생 사실만 attempt 레코드에 기록된다.
- hook 경로를 **읽는 것**(\`git config --get core.hooksPath\`, \`git config get core.hooksPath\`, \`git config core.hooksPath\`) — 위반이 아니다."
`;
